--- a/KR_game_rules_l_english.yml
+++ b/KR_game_rules_l_english.yml
@@ -127,13 +127,13 @@ SPR_CIVIL_WAR:0 "@SPR 스페인 내전"
 RULE_OPTION_SPR_RANDOM:0 "무작위화"
 RULE_OPTION_SPR_RANDOM_DESC:0 "If the political split is not mended, Spain might even see a Civil War"
 RULE_OPTION_SPR_CIVIL_WAR:0 "내전 - 세개의 진영"
-RULE_OPTION_SPR_CIVIL_WAR_DESC:0 "The Spanish kingdom gets ripped apart by a three-sided civil war between numerous factions."
-RULE_OPTION_SPR_CIVIL_WAR_AVOIDED_SPR:0 "@SPR Acción Popular Wins Open Elections"
-RULE_OPTION_SPR_CIVIL_WAR_AVOIDED_SPR_DESC:0 "Open and fair elections are held, and the Acción Popular remains in power, and the kingdom remains whole."
-RULE_OPTION_SPR_CIVIL_WAR_AVOIDED_CNT:0 "@CNT CNT-FAI Wins Open Elections"
-RULE_OPTION_SPR_CIVIL_WAR_AVOIDED_CNT_DESC:0 "Open and fair elections are held, and the CNT-FAI is victorious by a wide margin, and a Spanish civil war is narrowly averted."
-RULE_OPTION_SPR_CIVIL_WAR_AVOIDED_CAR:0 "@CAR Carlists Wins Open Elections"
-RULE_OPTION_SPR_CIVIL_WAR_AVOIDED_CAR_DESC:0 "Open and fair elections are held, and the Carlists is victorious by a wide margin, and a Spanish civil war is narrowly averted."
+RULE_OPTION_SPR_CIVIL_WAR_DESC:0 "스페인 왕국은 수많은 새력의 의하여 세개의 진영으로 갈라져 내전을 치루게될겄입니다. "
+RULE_OPTION_SPR_CIVIL_WAR_AVOIDED_SPR:0 "@SPR 국민행동당의 선거승리"
+RULE_OPTION_SPR_CIVIL_WAR_AVOIDED_SPR_DESC:0 "선거가 열리고 국민행동당이 권력을 유지하게되었으며 왕국은 온전히 존속하게되었습니다 ."
+RULE_OPTION_SPR_CIVIL_WAR_AVOIDED_CNT:0 "@CNT 전국노동연맹의 선거승리"
+RULE_OPTION_SPR_CIVIL_WAR_AVOIDED_CNT_DESC:0 "선거가 열리고 전국노동연맹이 큰표차로 승리하였으며 스페인은 내전을 간신히 피하게되었습니다."
+RULE_OPTION_SPR_CIVIL_WAR_AVOIDED_CAR:0 "@CAR 카를리스타의 선거승리"
+RULE_OPTION_SPR_CIVIL_WAR_AVOIDED_CAR_DESC:0 "선거가 열리고 카를리스타가 큰표차로 승리하였으며 스페인은 내전을 간신히 피하게되었습니다."
 
 AUS_START_ELECTION:0 "@AUS Austrian Elections of 1936"
 RULE_OPTION_AUS_START_ELECTION_RANDOM:0 "무작위화"
