--- a/KR_game_rules_l_english.yml
+++ b/KR_game_rules_l_english.yml
@@ -245,19 +245,19 @@ RULE_GROUP_KAISERREICH_RULES_AFRICA:0 "카이저라이히 갈래 - 아프리카"
 
 NFA_START_ELECTION:0 "@NFA 공화국의 미래"
 RULE_OPTION_NFA_START_RANDOM:0 "무작위화"
-RULE_OPTION_NFA_START_RANDOM_DESC:0 "The French Republic in exile is establishing a new order."
-RULE_OPTION_NFA_START_EMPIRE_ABSOLUTISM:0 "Imperial Restoration (Pat)"
-RULE_OPTION_NFA_START_EMPIRE_ABSOLUTISM_DESC:0 "National France becomes an Absolute Monarachy headed by Napoléon IV."
-RULE_OPTION_NFA_START_EMPIRE_CONSTITUTIONAL_MONARCHY:0 "Imperial Restoration"
-RULE_OPTION_NFA_START_EMPIRE_CONSTITUTIONAL_MONARCHY_DESC:0 "National France becomes an Constitutional Monarachy headed by Napoléon IV."
-RULE_OPTION_NFA_START_KINGDOM_ABSOLUTISM:0 "Bourbon Restoration (Pat)"
-RULE_OPTION_NFA_START_KINGDOM_ABSOLUTISM_DESC:0 "National France becomes an Absolute Monarachy headed by the house of d'Orléans"
-RULE_OPTION_NFA_START_KINGDOM_CONSTITUTIONAL_MONARCHY:0 "Bourbon Restoration"
-RULE_OPTION_NFA_START_KINGDOM_CONSTITUTIONAL_MONARCHY_DESC:0 "National France becomes an Constitutional Monarachy headed by the house of d'Orléans."
-RULE_OPTION_NFA_START_REPUBLIC_PETAIN:0 "Petain Remains President"
-RULE_OPTION_NFA_START_REPUBLIC_PETAIN_DESC:0 "Petain will stay president until his potential resignation or death."
+RULE_OPTION_NFA_START_RANDOM_DESC:0 "망명 프랑스공화국은 새로운 질서를 새울것입니다."
+RULE_OPTION_NFA_START_EMPIRE_ABSOLUTISM:0 "제국 복원 (Pat)"
+RULE_OPTION_NFA_START_EMPIRE_ABSOLUTISM_DESC:0 "프랑스는 나폴레옹 4세가 이끄는 절대왕정국가 될겄입니다."
+RULE_OPTION_NFA_START_EMPIRE_CONSTITUTIONAL_MONARCHY:0 "제국 복원"
+RULE_OPTION_NFA_START_EMPIRE_CONSTITUTIONAL_MONARCHY_DESC:0 "프랑스는 나폴레옹 4세가 이끄는 입헌군주국이 될겄입니다."
+RULE_OPTION_NFA_START_KINGDOM_ABSOLUTISM:0 "부르봉 왕가 복원 (Pat)"
+RULE_OPTION_NFA_START_KINGDOM_ABSOLUTISM_DESC:0 "프랑스는 부르봉 왕가가 이끄는 절대왕정국가가 될겄입니다."
+RULE_OPTION_NFA_START_KINGDOM_CONSTITUTIONAL_MONARCHY:0 "부르봉 왕가 복원"
+RULE_OPTION_NFA_START_KINGDOM_CONSTITUTIONAL_MONARCHY_DESC:0 "프랑스는 부르봉 왕가가 이끄는 입헌군주국이 될겄입니다."
+RULE_OPTION_NFA_START_REPUBLIC_PETAIN:0 "페탱이 대통령으로 남다"
+RULE_OPTION_NFA_START_REPUBLIC_PETAIN_DESC:0 "페탱은 사임하거나 죽기전까지 대통력직을 유지할것입니다."
 RULE_OPTION_NFA_START_REPUBLIC_NEW:0 "새로운 대통령"
-RULE_OPTION_NFA_START_REPUBLIC_NEW_DESC:0 "A new president will be elected in the upcoming elections."
+RULE_OPTION_NFA_START_REPUBLIC_NEW_DESC:0 "다가오는 선거에서 새로운 대통령이 선출될것입니다."
 
 MAF_COLLAPSE:0 "@MAF 미텔아프리카의 붕괴"
 RULE_OPTION_MAF_COLLAPSE_RANDOM:0 "무작위화"
